--- a/layers/+lang/python/README.org
+++ b/layers/+lang/python/README.org
@@ -41,7 +41,7 @@ This layer adds support for the Python language.
 ** Layer
 To use this configuration layer, add it to your =~/.spacemacs=. You will need to
 add =python= to the existing =dotspacemacs-configuration-layers= list in this
-file.
+file.=M-x jedi:install= need first.
 
 ** Test runner
 Both =nose= and =pytest= are supported. By default =nose= is used.
